# hopwise

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  check_space.py  explainability_metrics.yaml  format_kg_aware_recsys_embs.ipynb  generate_docs.sh  pyproject.toml  reproducibility_recsys26.yaml  reproducibility_recsys26_pairwise.yaml  requirements.txt  run_hopwise.py  run_hopwise_group.py  run_hyper.py  run_test.sh  sentence_transformer.py  significance_test.py  test_kgglm_minimal.py  use_case_conformal_prediction.py
.github/ISSUE_TEMPLATE/: bug_report.md  model_request.md
.github/workflows/: documentation.yml  lint.yml  matrix.yml  pypi_release.yml  python-package.yml  sync.yml  sync_and_test.yml  uv_sync.yml  uv_sync_cpu.yml  uv_sync_cu118.yml  uv_sync_cu121.yml  uv_sync_cu124.yml
docs/: genindex.html  index.html  model_comparison.md  py-modindex.html  requirements.txt  search.html
docs/_modules/: index.html
docs/_sources/autoapi/: index.rst.txt
docs/_sources/developer_guide/: create_dataloaders.rst.txt  create_samplers.rst.txt
docs/_static/: custom.css
docs/autoapi/: index.html
docs/autoapi/hopwise/: index.html
docs/case_study/: recommendation_analysis.html  rq_vae_semantic_ids.html  semantic_ids_faiss.html  tsne_visualization.html
docs/developer_guide/: change_configuration.html  create_dataloaders.html  create_datasets.html  create_metrics.html  create_models.html  create_samplers.html  create_trainers.html
docs/doctrees/: index.doctree
docs/doctrees/autoapi/: index.doctree
docs/doctrees/case_study/: recommendation_analysis.doctree  rq_vae_semantic_ids.doctree  semantic_ids_faiss.doctree  tsne_visualization.doctree
docs/doctrees/developer_guide/: change_configuration.doctree  create_dataloaders.doctree  create_datasets.doctree  create_metrics.doctree  create_models.doctree  create_samplers.doctree  create_trainers.doctree
docs/doctrees/get_started/: distributed_training.doctree  install.doctree
docs/doctrees/tutorial/: 00_introduction.doctree
docs/doctrees/user_guide/: configuration.doctree  data_intro.doctree  half_precision_training.doctree  hyperparameters_tuning.doctree  item_cold_start.doctree  qa.doctree  significance_test.doctree  tasks_models_intro.doctree  training_and_evaluation.doctree  usage.doctree
docs/get_started/: distributed_training.html  install.html
docs/html/: .buildinfo  objects.inv  searchindex.js
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
docs/source/case_study/: recommendation_analysis.rst  rq_vae_semantic_ids.rst  semantic_ids_faiss.rst  tsne_visualization.rst
docs/source/developer_guide/: change_configuration.rst  create_dataloaders.rst  create_datasets.rst  create_models.rst  create_trainers.rst
docs/source/get_started/: cli_reference.rst  distributed_training.rst  install.rst
docs/source/hopwise/: hopwise.config.configurator.rst  hopwise.config.rst  hopwise.data.dataloader.abstract_dataloader.rst  hopwise.data.dataloader.general_dataloader.rst  hopwise.data.dataloader.knowledge_dataloader.rst  hopwise.data.dataloader.rst  hopwise.data.dataloader.user_dataloader.rst  hopwise.data.dataset.customized_dataset.rst  hopwise.data.dataset.dataset.rst  hopwise.data.dataset.decisiontree_dataset.rst  hopwise.data.dataset.kg_dataset.rst  hopwise.data.dataset.kg_path_dataset.rst  hopwise.data.dataset.kg_seq_dataset.rst  hopwise.data.dataset.rst  hopwise.data.dataset.sequential_dataset.rst  hopwise.data.interaction.rst  hopwise.data.rst  hopwise.data.transform.rst  hopwise.data.utils.rst  hopwise.evaluator.base_metric.rst  hopwise.evaluator.collector.rst  hopwise.evaluator.evaluator.rst  hopwise.evaluator.metrics.rst  (+144 more)
docs/tutorial/: 00_introduction.html
docs/user_guide/: configuration.html  data_intro.html  half_precision_training.html  hyperparameters_tuning.html  item_cold_start.html  qa.html  significance_test.html  tasks_models_intro.html  training_and_evaluation.html  usage.html
hopwise/: __init__.py  __main__.py  cli.py
hopwise/config/: __init__.py  configurator.py
hopwise/data/: __init__.py  interaction.py  transform.py  utils.py
hopwise/evaluator/: __init__.py  base_metric.py  collector.py  conformal_metrics.py  evaluator.py  metrics.py  register.py  utils.py
hopwise/model/: abstract_recommender.py  conformal_calibration.py  init.py  layers.py  logits_processor.py  loss.py  ranker.py  sequence_postprocessor.py
hopwise/properties/: overall.yaml
hopwise/quick_start/: __init__.py  quick_start.py
hopwise/sampler/: __init__.py  sampler.py
hopwise/trainer/: __init__.py  hf_path_trainer.py  hyper_tuning.py  trainer.py
hopwise/utils/: __init__.py  case_study.py  conformal_utils.py  enum_type.py  logger.py  url.py  utils.py  wandblogger.py
run_example/: 1_Train_TransE_and_Preprocess_Embeddings.ipynb  RQ_Vae_Semantic_IDs.py  case_study_example.py  convert_items_to_sentenceTransformer.ipynb  format_kg_aware_recsys_embs.ipynb  hopwise-using-all-items-for-prediction.ipynb  human_explanations.ipynb  lstm-model-with-item-infor-fix-missing-last-item.ipynb  recbole-using-all-items-for-prediction.ipynb  save_and_load_example.py  sequential-model-fixed-missing-last-item.ipynb  session_based_rec_example.py  significance_test.py  tSNE embedding visualisation.ipynb
src_docs/: Makefile  requirements.txt
src_docs/source/: conf.py
tests/: conftest.py  test_smoke.py
tests/config/: test_command_line.py  test_config.py  test_config_example.yaml  test_overall.py
tests/data/: test_dataloader.py  test_dataset.py  test_transform.py
tests/evaluation_setting/: test_evaluation_setting.py
tests/hyper_tuning/: test_hyper_tuning.py  test_hyper_tuning_config.yaml  test_hyper_tuning_params.test
tests/metrics/: test_consumer_topk_metrics.py  test_explainability.py  test_explainability_ad_hoc.py  test_explainability_metrics.py  test_explainability_metrics_explicit_comp_version.py  test_loss_metrics.py  test_rank_metrics.py  test_topk_metrics.py
tests/model/: test_model.yaml  test_model_auto.py  test_model_manual.py
umap2026/: index.html
(+1338 files in other folders)
