[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/hopwise/properties",
  "/tests",
  "/run_example",
  "/run_hyper.py",
  "/significance_test.py",
  "/run_hopwise.py",
  "/run_hopwise_group.py"
]

[tool.hatch.build.targets.wheel]
packages = ["hopwise"]

[tool.hatch.version]
path = "hopwise/__init__.py"

[tool.hatch.build.target.sdist.force-include]
"run_hopwise.py" = "hopwise/run_hopwise.py"
"run_hopwise_group.py" = "hopwise/run_hopwise_group.py"

[project.scripts]
hopwise = "hopwise.run_hopwise:main"
hopwise_group = "hopwise.run_hopwise_group:main"

[project]
name = "hopwise"
description = """
_hopwise_ is an advanced extension of the Recbole library, designed to enhance recommendation systems with the power of knowledge graphs.
By integrating knowledge embedding models, path-based reasoning methods, and path language modeling apporaches, hopwise supports both recommendation and link prediction tasks with a focus on interpretability and self-explanation.
"""
authors = [
    { name = "Giacomo Balloccu", email = "gballoccu@gmail.com" },
    { name = "Ludovico Boratto", email = "ludovico.boratto@acm.org" },
    { name = "Mirko Marras", email = "mirko.marras@acm.org" },
    { name = "Alessandro Soccol", email = "alessandrosoccol@gmail.com" },
    { name = "Giacomo Medda", email = "jackm.medda@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["version"]
keywords = [
  "recommender systems",
  "knowledge graph",
  "language models",
  "path modeling",
  "explainability"
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy<=1.24.4 ; python_version < '3.12'",
    "numpy>=2.0.0 ; python_version == '3.12'",
    "pandas>=1.3.0, <2.0.3 ; python_version < '3.12'",
    "pandas>2.0.0 ; python_version == '3.12'",
    "transformers",
    "accelerate>=0.34.2",
    "tqdm",
    "wandb",
    "igraph",
    "colorama>=0.4.4",
    "scipy>=1.12.0",
    "thop",
    "tabulate",
    "tensorboard>=2.5.0",
    "psutil",
    "texttable",
    "datasets",
    "colorlog>=4.7.2",
    "protobuf==3.19.0",
    "joblib",
    "numba",
    "scikit-learn",
]

[project.optional-dependencies]
nncf = [
  "community",
  "python-louvain"
]
xgboost = [
  "xgboost"
]
ncl = [
  "faiss-cpu"
]
lightgbm = [
  "lightgbm"
]
ldiffrec = [
  "kmeans-pytorch"
]
# kgin = [
#   "torch-scatter",
# ]
hyper = [
  "hyperopt==0.2.5",
  "optuna",
  "ray[tune]"
]
all-models = [
  "hopwise[nncf]",
  "hopwise[xgboost]",
  "hopwise[ncl]",
  "hopwise[lightgbm]",
  "hopwise[ldiffrec]",
  # "hopwise[kgin]",
]

[dependency-groups]
cpu = [
  "torch==2.4.0 ; sys_platform == 'win32'",
  "dgl",
]
cu118 = [
  "torch==2.3.*",
  "dgl",
]
cu121 = [
  "torch==2.3.*",
  "dgl",
]
cu124 = [
  "torch==2.4.*",
  "dgl==2.4.*",
]
docs = [
  "sphinx",
  "furo",
  "sphinx-copybutton"
]
test = [
  "pytest-xdist",
]
lint = [
  "ruff",
  "pre-commit"
]
dev = [
  "hopwise[all-models]",
  "hopwise[hyper]",
  "plotly",
  "opentsne",
  "nbformat",
  {include-group = "docs"},
  {include-group = "test"},
  {include-group = "lint"},
]

[tool.tox]
requires = ["tox-uv>=1"]
env_list = ["3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
description = "uv_sync run base"
dependency_groups = ["dev", "test"]
commands = [
  ["uv", "run", "--active", "run_hopwise.py", "--epochs=2"],
  ["uv", "run", "--active", "run_hopwise.py", "--model", "LightGCN", "--epochs=2"],
  ["uv", "run", "--active", "run_hopwise.py", "--model", "KGAT", "--epochs=2"]
]

[tool.uv]
find-links = [
  "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html",
  "https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html",
  "https://data.dgl.ai/wheels/torch-2.3/repo.html",
  "https://data.pyg.org/whl/torch-2.4.0+cu124.html",
  "https://data.pyg.org/whl/torch-2.3.0+cu121.html"
]
conflicts = [
  [
    { group = "cpu" },
    { group = "cu118" },
    { group = "cu121" },
    { group = "cu124" },
  ],
]
no-build-isolation-package = ["torch-scatter"]

[tool.uv.sources]
dgl = [
  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.9'" },
  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.10'" },
  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.11'" },
  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.12'" },
  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp39-cp39-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.9'" },
  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp310-cp310-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.10'" },
  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp311-cp311-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.11'" },
  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.12'" },
  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp39-cp39-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.9'" },
  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp310-cp310-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.10'" },
  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.11'" },
  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.12'" },
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  # Pylint
  "PL",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # pyupgrade
  "UP",
  # pydocstyle
  # "D",
  # pandas-vet
  # "PD"  Not working well. Confuses torch.values as df.values and suggests using .to_numpy()
]
ignore = [
    "PLR0913", # Too many arguments in function definition
    "UP031", # TEMPORARY: Use format specifiers instead of percent format
    "PLR0915", # TEMPORARY: Too many statements
    "PLR0912", # TEMPORARY: Too many branches
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"**/{tests,docs,run_example}/*" = ["D", "PLR2004"]
"**/{significance_test.py,run_hyper.py}" = ["D", "PLR2004"]
"**/hopwise/evaluator/__init__.py" = ["I"]
"**/hopwise/data/dataset/__init__.py" = ["I"]
"**/hopwise/model/knowledge_aware_recommender/pgpr.py" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
