[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/hopwise/properties/**/*",
  "/tests",
  "/run_example",
  "/significance_test.py",
]

[tool.hatch.build.targets.wheel]
packages = ["hopwise"]

[tool.hatch.build.targets.wheel.force-include]
"hopwise/properties" = "hopwise/properties"
"hopwise/dataset_example/ml-100k" = "hopwise/dataset_example/ml-100k"

[tool.hatch.version]
path = "hopwise/__init__.py"

[project.scripts]
hopwise = "hopwise.cli:cli"

[project]
name = "hopwise"
description = """
_hopwise_ is an advanced extension of the Recbole library, designed to enhance recommendation systems with the power of knowledge graphs.
By integrating knowledge embedding models, path-based reasoning methods, and path language modeling apporaches, hopwise supports both recommendation and link prediction tasks with a focus on interpretability and self-explanation.
"""
authors = [
    { name = "Ludovico Boratto", email = "ludovico.boratto@acm.org" },
    { name = "Mirko Marras", email = "mirko.marras@acm.org" },
    { name = "Alessandro Soccol", email = "alessandrosoccol@gmail.com" },
    { name = "Giacomo Medda", email = "jackm.medda@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["version"]
keywords = [
  "recommender systems",
  "knowledge graph",
  "language models",
  "path modeling",
  "explainability"
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy<=1.24.4 ; python_version < '3.12'",
    "numpy>=2.0.0 ; python_version == '3.12'",
    "pandas>=1.3.0, <2.0.3 ; python_version < '3.12'",
    "pandas>2.0.0 ; python_version == '3.12'",
    "transformers",
    "accelerate>=0.34.2",
    "datasets",
    "tqdm",
    "wandb",
    "igraph",
    "colorama>=0.4.4",
    "scipy>=1.12.0",
    "thop",
    "tabulate",
    "tensorboard>=2.5.0",
    "psutil",
    "texttable",
    "colorlog>=4.7.2",
    "protobuf==3.19.0",
    "joblib",
    "numba",
    "scikit-learn",
]

[project.optional-dependencies]
nncf = [
  "community",
  "python-louvain"
]
xgboost = [
  "xgboost"
]
ncl = [
  "faiss-cpu"
]
lightgbm = [
  "lightgbm"
]
ldiffrec = [
  "kmeans-pytorch"
]
# kgin = [
#   "torch-scatter",
# ]
hyper = [
  "hyperopt==0.2.5",
  "optuna",
  "ray[tune]"
]
all-models = [
  "hopwise[nncf]",
  "hopwise[xgboost]",
  "hopwise[ncl]",
  "hopwise[lightgbm]",
  "hopwise[ldiffrec]",
  # "hopwise[kgin]",
]
cpu = [
  "torch==2.4.0 ; sys_platform == 'win32'",
  "dgl",
]
cu121 = [
  "torch==2.3.*",
  "dgl",
]
cu124 = [
  "torch==2.4.*",
  "dgl",
]
cli = [
  "click>=8.0.0",
  "rich>=12.0.0",
]

[dependency-groups]
docs = [
  "sphinx",
  "furo",
  "sphinx-copybutton"
]
test = [
  "pytest-xdist",
]
lint = [
  "ruff",
  "pre-commit"
]
dev = [
  "hopwise[all-models,hyper,cli]",
  "plotly",
  "opentsne",
  "nbformat",
  {include-group = "docs"},
  {include-group = "test"},
  {include-group = "lint"},
]

[tool.tox]
requires = ["tox-uv>=1"]
env_list = ["3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
description = "uv_sync run base"
dependency_groups = ["dev", "test"]
extras = ["cu121"]
commands = [
  ["uv", "run", "--active", "run_hopwise.py", "--epochs=2"],
  ["uv", "run", "--active", "run_hopwise.py", "--model", "LightGCN", "--epochs=2"],
  ["uv", "run", "--active", "run_hopwise.py", "--model", "KGAT", "--epochs=2"]
]

[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.4.0+cu124.html",
  "https://data.pyg.org/whl/torch-2.3.0+cu121.html"
]


no-build-isolation-package = ["torch-scatter"]

[tool.uv.sources]
dgl = [
  { index = "dgl-win-cu121", extra = "cu121", marker = "sys_platform == 'win32'" },
  { index = "dgl-win-cpu", extra = "cpu", marker = "sys_platform == 'win32'" },
  { index = "dgl-cu124", extra = "cu124", marker = "sys_platform != 'win32'" },
  { index = "dgl-cu121", extra = "cu121", marker = "sys_platform != 'win32'" },
  { index = "dgl-cpu", extra = "cpu", marker = "sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "dgl-win-cu121"
url = "https://data.dgl.ai/wheels/cu121/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "dgl-win-cpu"
url = "https://data.dgl.ai/wheels/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "dgl-cu124"
url = "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "dgl-cu121"
url = "https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "dgl-cpu"
url = "https://data.dgl.ai/wheels/torch-2.3/repo.html"
format = "flat"
explicit = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  # Pylint
  "PL",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # pyupgrade
  "UP",
  # pydocstyle
  # "D",
  # pandas-vet
  # "PD"  Not working well. Confuses torch.values as df.values and suggests using .to_numpy()
]
ignore = [
    "PLR0913", # Too many arguments in function definition
    "UP031", # TEMPORARY: Use format specifiers instead of percent format
    "PLR0915", # TEMPORARY: Too many statements
    "PLR0912", # TEMPORARY: Too many branches
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"**/{tests,docs,run_example}/*" = ["D", "PLR2004"]
"**/{significance_test.py}" = ["D", "PLR2004"]
"**/hopwise/evaluator/__init__.py" = ["I"]
"**/hopwise/data/dataset/__init__.py" = ["I"]
"**/hopwise/model/knowledge_aware_recommender/pgpr.py" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
